Corrigido nome do Valdinei

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -85,7 +85,7 @@
 
 
 % Includes headers with simplified name of the authors and article title
-\markboth{R. L. Beirigo and V. F. da Silva and A. H. R. Costa}
+\markboth{R. L. Beirigo and V. Freire and A. H. R. Costa}
 {\titulo}
 %  -> \markboth{}{}
 %         takes 2 arguments
@@ -99,7 +99,7 @@
 % List of authors
 %IF THERE ARE TWO or more institutions, please use:
 %\author{Name of Author1\inst{1}, Name of Author2\inst{2}, Name of Author3\inst{2}}
-\author{R. L. Beirigo and V. F. da Silva and A. H. R. Costa}
+\author{R. L. Beirigo and V. Freire and A. H. R. Costa}
 
 %Affiliation and email
 \institute{Escola Politécnica da Universidade de São Paulo, Brazil \\
