--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -12,7 +12,7 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{amsmath}
-\usepackage{ulem}
+\usepackage[normalem]{ulem}
 
 %\usepackage{cite} % NOTE: do **not** include this package because it conflicts with kdmile.bst
 
@@ -108,7 +108,7 @@
 
 % Article abstract - it should be from 100 to 300 words
 \begin{abstract}
-  As técnicas de Aprendizado por Reforço permitem a solução de um problema através da escolha de ações que maximizem valores de recompensas recebidas e que refletem a qualidade das ações tomadas pelo agente. Em problemas com estrutura hierárquica, a solução final depende do encadeamento de soluções para sub-problemas aí presentes, sendo frequente a repetição de sub-problemas nesse encadeamento. Nesses casos, a utilização de options permite o aprendizado e armazenamento das soluções individuais para cada sub-problema, que podem então ser utilizadas múltiplas vezes na composição de uma solução completa para o problema final, acelerando o aprendizado. Apesar de vantajosa, a utilização de options necessita de definições por parte do projetista, o que representa uma sobrecarga. Para contornar esse problema, foram propostas técnicas de descoberta automática de options, dentre as quais a utilização de motivação intrínseca se destaca por permitir ao agente aprender soluções de sub-problemas úteis na solução do problema final sem a necessidade de se definir manualmente novas recompensas para esses sub-problemas. Apesar de promissora, essa proposta utiliza um conjunto de componentes de aprendizado que ainda carece de investigação aprofundada acerca dos impactos individual e coletivo de cada componente, notadamente a aplicação das options durante o aprendizado. Neste trabalho realizou-se uma investigação de estratégias de aplicação de options durante o Aprendizado por Reforço com Motivação Intrínseca através da implementação das estratégias propostas, acompanhadas de avaliação de desempenho por verificação experimental e breve discussão teórica. Os resultados obtidos são então compilados em uma proposta de implementação que utiliza as alternativas que apresentaram o melhor desempenho de aprendizado.
+  As técnicas de Aprendizado por Reforço permitem a solução de um problema através da escolha de ações que maximizem valores de recompensas recebidas e que refletem a qualidade das ações tomadas pelo agente em um processo de tentativa e erro. Em problemas com estrutura hierárquica, a solução final depende do encadeamento de soluções para sub-problemas aí presentes, sendo frequente a repetição de sub-problemas nesse encadeamento. Nesses casos, a utilização de options permite o aprendizado e armazenamento das soluções individuais para cada sub-problema, que podem então ser utilizadas múltiplas vezes na composição de uma solução completa para o problema final, acelerando o aprendizado. Apesar de vantajosa, a utilização de options necessita de definições por parte do projetista, o que representa uma sobrecarga. Para contornar esse problema, foram propostas técnicas de descoberta automática de options, dentre as quais a utilização de motivação intrínseca se destaca por permitir ao agente aprender soluções de sub-problemas úteis na solução do problema final sem a necessidade de se definir manualmente novas recompensas para esses sub-problemas individualmente. Apesar de promissora, essa proposta utiliza um conjunto de componentes de aprendizado que ainda carece de investigação aprofundada acerca dos impactos individual e coletivo de cada componente, notadamente a aplicação das options durante o aprendizado. Neste trabalho realizou-se uma investigação de estratégias de aplicação de options durante o Aprendizado por Reforço com Motivação Intrínseca através da implementação das estratégias propostas, acompanhadas de avaliação de desempenho por verificação experimental e breve discussão teórica. Os resultados obtidos são então compilados em uma proposta de implementação que utiliza as alternativas que apresentaram o melhor desempenho na avaliação experimental.
 \end{abstract}
 
 % ACM Computing Classification System categories
@@ -140,7 +140,13 @@
 \maketitle
 
 \section{Introdução}
-Pellentesque dapibus suscipit ligula. Donec posuere augue in quam. Etiam vel tortor sodales tellus ultricies commodo. Suspendisse potenti. Aenean in sem ac leo mollis blandit. Donec neque quam, dignissim in, mollis nec, sagittis eu, wisi. Phasellus lacus. Etiam laoreet quam sed arcu. Phasellus at dui in ligula mollis ultricies. Integer placerat tristique nisl. Praesent augue. Fusce commodo. Vestibulum convallis, lorem a tempus semper, dui dui euismod elit, vitae placerat urna tortor vitae lacus. Nullam libero mauris, consequat quis, varius et, dictum id, arcu. Mauris mollis tincidunt felis. Aliquam feugiat tellus ut neque. Nulla facilisis, risus a rhoncus fermentum, tellus tellus lacinia purus, et dictum nunc justo sit amet elit.
+Problemas nos quais o agente deve tomar uma série de decisões sequenciais podem ser resolvidos através de técnicas de Aprendizado por Reforço \cite{rl1998, rlczaba}, em que o agente recebe um reforço numérico indicando a qualidade de cada ação tomada. Esse processo de aprendizado ocorre por tentativa e erro, no qual o agente alterna entre a \emph{aplicação} do conhecimento adquirido até o momento para selecionar a melhor ação e a \emph{exploração} do ambiente, onde o agente experimenta novas ações, aumentando o seu conhecimento sobre o ambiente e o problema. Apesar do sucesso apresentado na aplicação de técnicas AR a problemas reais \cite{}, elas podem apresentar indesejada lentidão na obtenção das soluções.
+ 
+Uma forma de mitigar essa lentidão é explorar características da \emph{representação} do problema original que permitam a aplicação de técnicas de otimização. Um exemplo disso é a utilização de options \cite{option}, que permitem que um problema de AR originalmente com representação monolítica seja representado de forma modular. Nessa nova representação, são determinados sub-problemas componentes do problema original, permitindo o aprendizado simultâneo da solução para o problema original e seus sub-problemas. Quando o problema original possui uma estrutura \emph{hierárquica}, é comum o agente ter de resolver mais de uma vez o mesmo sub-problema em momentos diferentes. Nesses casos, a utilização de options apresenta a vantagem de acelerar o aprendizado por eliminar a necessidade de se aprender a solução para o mesmo sub-problema mais de uma vez, permitindo o reuso do conhecimento já adquirido na forma de options \cite{option}.
+
+Entretanto, para que as options possam ser utilizadas, há a necessidade da definição de elementos cuja identificação pode não ser imediata à apreciação do problema, podendo causar sobrecarga em tempo de projeto. Para contornar esse revés, são estudadas técnicas de descoberta automática de options \cite{}, em que a definição das mesmas fica a cargo de um algoritmo responsável por identificar sub-problemas e criar options para resolvê-los. Das diversas técnicas empregadas, pode ser destacada a utilização de \emph{motivação intrínseca} em AR \cite{imrl}, em que o agente recebe recompensas adicionais através de um mecanismo interno associado a variações de características do ambiente que lhe despertam \emph{marcado interesse}. Nessas técnicas, o agente é codificado de forma a associar sub-problemas a variações significativas de atributos selecionados na descrição fatorada do estado, reduzindo o trabalho de definição das options à determinação dos atributos relevantes para a identificação dos sub-problemas \cite{imrl}.
+
+Essa técnica foi aplicada com sucesso na solução de um problema com forte estrutura hierárquica \cite{imrl}, através da proposta de um algoritmo que utiliza em conjunto múltiplas técnicas de AR. Apesar da aprensentação detalhada do papel da motivação intrínseca no aprendizado, não há uma investigação mais aprofundada dos diversos componentes de aprendizado envolvidos algoritmo, notadamente a estratégia de aplicação das options aprendidas. Neste trabalho, investigamos essa questão, apresentando algumas propostas de estratégias para a aplicação das options aprendidas juntamente com a avaliação experimental de cada uma delas e uma breve discussão teórica.
 
 \section{Fundamentos Teóricos}
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
